Don't process random events from the X event queue while waiting for clipboard operations to complete.  Bug 214583, r=blizzard.  Not part of the default build.